# Mars-Rover

./: .gitignore  Dockerfile  README.md  rosdep.yaml
.github/workflows/: main.yml
VINS-Mono/config/euroc/: euroc_config.yaml
aruco_sim_rover/: CMakeLists.txt  LICENSE  model.sdf  package.xml
aruco_sim_rover/launch/: arucoSpawner.launch  robot_description.launch  world.launch
aruco_sim_rover/meshes/: arucoMarker3.dae
aruco_sim_rover/urdf/: aruco_marker.xacro
camera_xacro_rover/: package.xml
camera_xacro_rover/src/: aruco_detector_cpp.C
camera_xacro_rover/urdf/: camera.xacro
commander/scripts/: pub_command.py
controller/: CMakeLists.txt  package.xml
controller/scripts/: control_refactored.py  motor1_refactored.py
devel/: .catkin
devel/lib/pkgconfig/: ar_demo.pc  aruco_sim_rover.pc  benchmark_publisher.pc  camera_model.pc  data_generator.pc  feature_tracker.pc  four_wheel_steering_msgs.pc  libviso2.pc  pose_graph.pc  rover_control.pc  rover_description.pc  rover_navigation.pc
devel/share/ar_demo/cmake/: ar_demoConfig.cmake
four_wheel_steering_controller/src/: four_wheel_steering_controller_refactored.cpp  i2c_mas_refactored.py  odometry_refactor.cpp  speed_limiter_refactored.cpp
four_wheel_steering_controller/test/launch/: view_four_wheel_steering.launch
fourth_robot_control/: package.xml
fourth_robot_control/config/: controller.yaml
fourth_robot_control/launch/: robot_control.launch
fourth_robot_description/: CMakeLists.txt  package.xml
fourth_robot_description/robots/: fourth_robot.urdf.xacro
fourth_robot_description/urdf/base/: base.urdf.xacro
fourth_robot_description/urdf/suspension/: suspension.urdf.xacro
fourth_robot_description/urdf/wheel/: wheel.urdf.xacro
gp-navigation/launch/: gp_navigation_husky_env_a.launch
gp-navigation/rviz_config/: gp.rviz
gp-navigation/scripts/: gp_mapping_module.py  path_planning_module_client.py  sublocal_goal_check.py  transform_node.py
marker_detection_rover/: CMakeLists.txt  LICENSE  README.md  package.xml
marker_detection_rover/scripts/: 4946245-hd_1280_720_31fps.mp4Zone.Identifier  find_between.py  find_between_1.py  find_between_2.py  find_between_cpp.cpp  objectDetectionCaffe.py  object_detect.py  spiral_search.py
mars_rover_hw/: CMakeLists.txt  package.xml
mars_rover_hw/config/: controllers.yaml
mars_rover_hw/include/mars_rover_hw/: mars_rover_can_hw.h
mars_rover_hw/launch/: mars_rover_control.launch
mars_rover_hw/scripts/: setup_can.sh
mars_rover_hw/src/: mars_rover_can_hw.cpp  mars_rover_can_hw_node.cpp
pwm_controller/: motor2.py
robot_launch/launch/: launch_simulation.launch
robot_launch/worlds/: stage.world
rover_control/: CMakeLists.txt  Readme.md  package.xml
rover_control/config/: control.yaml  gps_localization.yaml  localization.yaml  navsat_transform.yaml  pid.yaml
rover_control/launch/: control.launch  teleop.launch  test.launch
rover_control/scripts/: ackermann_refactored.py  teleop_mars_rover.py
rover_description/: CMakeLists.txt  Readme.md  package.xml
rover_description/config/: joint_names_rover_description.yaml
rover_description/launch/: Rover_spawn_with_aruco_detection.launch  crazy.launch  display.launch  gazebo.launch  main.launch
rover_description/meshes/: steeering3.STL  steering4.STL  wheel2.STL  wheel3.STL  wheel4.STL
rover_description/rviz/: rviz_image.rviz
rover_description/urdf/: intel_realsense.urdf.xacro  rover_description.urdf  rover_description_scrap.urdf
rover_navigation/: Readme.md  package.xml
rover_navigation/config/: costmap_common.yaml  costmap_global_laser.yaml  costmap_local.yaml  planner.yaml
rover_navigation/launch/: amcl_demo.launch  autonomous_mission.launch  exploration.launch  gps_nav.launch  move_base.launch  navigation.launch
rover_navigation/scripts/: a.py  gps_to_pose.py
smach_rover/: CMakeLists.txt  package.xml
smach_rover/launch/: smach.launch
smach_rover/smach_rover/src/: idle_state.py  spiral_search_state.py  teleop_state.py
smach_rover/src/: autonomous_state.py  idle_state.py  spiral_search_state.py  state_machine.py  teleop_state.py
src/VINS-Mono/: .README.md.swp
src/aruco_sim_rover/: README.md  package.xml
src/aruco_sim_rover/launch/: arucoSpawner.launch
src/aruco_sim_rover/meshes/: arucoMarker0.dae  arucoMarker1.dae  arucoMarker2.dae  arucoMarker4.dae  arucoMarker5.dae
src/marker_detection_rover/scripts/: find_between_1.py
src/pwm_controller/: control.py
src/rover_control/config/: control_swerve.yaml  navsat_transform.yaml  pid.yaml
src/rover_control/launch/: teleop.launch
src/rover_description/: package.xml
src/rover_description/launch/: description.launch  display.launch  main.launch
src/rover_description/meshes/: steering1.STL  steering2.STL  wheel1.STL
src/rover_description/urdf/: rover_description.csv  rover_description.urdf
src/rover_description/worlds/: mars.world  mars_default.world  terrain.world
src/rover_navigation/: CMakeLists.txt
src/rover_navigation/config/: mapper_params_online_async.yaml  pb_gb.txt
src/rover_navigation/launch/: exploration_demo.launch  gmapping_demo.launch  move_base.launch  navigation.launch  slam.launch
src/rover_navigation/scripts/: commad_file.yml  gps_to_pose.py
src/smach_rover/: package.xml
src/swerve_steering_controller/src/: odometry.cpp  speed_limiter.cpp  utils.cpp  wheel.cpp
src/viso2/viso2_ros/: CMakeLists.txt
swerve_steering_controller/: CMakeLists.txt  package.xml  swerve_steering_controller_plugins.xml
swerve_steering_controller/include/swerve_steering_controller/: swerve_steering_controller.h
swerve_steering_controller/src/: swerve_custom.cpp  swerve_steering_controller.cpp
swerve_steering_controller/test/meshes/: wheel.STL
swerve_steering_controller/test/src/: odompublisher.py  teleop_swerve.py
swerve_steering_controller/test/urdf/: robot.urdf
urdf_geometry_parser/src/: urdf_geometry_parser.cpp
viso2/viso2_ros/: package.xml
viso2/viso2_ros/launch/: demo.launch
viso2/viso2_ros/src/: odometer_base.h  odometry_params.h  stereo_odometer.cpp
(+25 files in other folders)
