<?xml version="1.0"?>
<package>
  <name>fourth_robot_control</name>
  <version>1.0.0</version>
  <description>The fourth_robot_control package</description>


  <maintainer email="groadpg@gmail.com">Robot mania</maintainer>
  <license>BSD</license>
  <author email="aaa@gmail.com">Robot manai</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>velocity_controllers</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>

</package>
