<?xml version="1.0"?>
<package>
  <name>fourth_robot_description</name>
  <version>2.0.0</version>
  <description>The 4WS robot package</description>

  <maintainer email="aaa@gmail.com">Robot mania</maintainer>
  <license>BSD</license>
  
  <author email="aaaa@gmail.com">Robot mania</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  
</package>
