<?xml version="1.0"?>
<package>
  <name>rover_control</name>
  <version>0.6.9</version>
  <description>Clearpath rover controller configurations</description>

  <author email="paul@bovbel.com">Paul Bovbel</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rover_control</url>
  <url type="bugtracker">https://github.com/rover/rover/issues</url>
  <url type="repository">https://github.com/rover/rover</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>rover_description</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>four_wheel_steering_controller</run_depend>
  <!-- <run_depend>multimaster_launch</run_depend> -->
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>
