<?xml version="1.0"?>
<package format="2">
  <name>rover_control</name>
  <version>0.6.9</version>
  <description>Clearpath rover controller configurations</description>

  <author email="paul@bovbel.com">Paul Bovbel</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rover_control</url>
  <url type="bugtracker">https://github.com/rover/rover/issues</url>
  <url type="repository">https://github.com/rover/rover</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>rover_description</exec_depend>
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>four_wheel_steering_controller</exec_depend>
  <!-- <exec_depend>multimaster_launch</exec_depend> -->
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <export>
  </export>
</package>
